# llm-serving-bench

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: BASELINE_REPORT-checkpoint.md
loadgen/: metrics.py  min_loadgen.py
loadgen/.ipynb_checkpoints/: min_loadgen-checkpoint.py
results/.ipynb_checkpoints/: c1-checkpoint.json  c16-checkpoint.json  c4-checkpoint.json
scripts/.ipynb_checkpoints/: serve-checkpoint.sh
tests/: test_metrics.py
tests/scripts/: bench.sh  f_serve.sh  run_profile_and_load.sh  run_profile_and_load_decode.sh
tests/scripts/traces/: cuda_smoke.nsys-rep  cuda_smoke.sqlite  vllm_deocde_heavy.stats.txt  vllm_prefill_heavy.stats.txt
week2/: day_1.md
