[project]
name = "llm-serving-bench"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]  # 常用：pycodestyle/pyflakes/isort/bugbear/pyupgrade
ignore = ["E501"]                   # 不强制行宽（你也可删掉）

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]                # 测试里偶尔会 import 但不用

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"